--- a/data/2pcorridoriseasy.json
+++ b/data/2pcorridoriseasy.json
@@ -12,6 +12,12 @@
             "link": "https://youtu.be/TwOHfWdn8Is?si=sVclmlHNT4ra3VcT",
             "percent": 100,
             "hz": "360"
+        },
+        {
+            "user": "bruno345",
+            "link": "https://youtu.be/ZWdD9rxKyZs",
+            "percent": 100,
+            "hz": "288"
         }
     ]
 }
